Emoji support for ChatApp (#42)